--- a/homework03.Rmd
+++ b/homework03.Rmd
@@ -27,7 +27,8 @@ df <- gapminder %>% filter(country %in% c("Canada"))
 ggplot(data = df, aes(x = lifeExp, y = gdpPercap)) + geom_point() 
 dfaus <- gapminder %>% filter(country %in% c("Australia"))
 ggplot(data = dfaus, aes(x = lifeExp, y = gdpPercap)) + geom_point()
-
+df2 <- gapminder %>% filter(country %in% c("United States"))
+ggplot(data = df2, aes(x = lifeExp, y = gdpPercap)) + geom_point()
 
 ```
 
